...
import cz.mendelu.xmusil5.plantdiscoverer.ui.components.list_items.ImageLabelListItem
import cz.mendelu.xmusil5.plantdiscoverer.ui.theme.grayCommon
import cz.mendelu.xmusil5.plantdiscoverer.utils.DateUtils
import cz.mendelu.xmusil5.plantdiscoverer.utils.PictureUtils
import org.koin.androidx.compose.getViewModel

const val TAG_NEW_PLANT_IMAGE = "newPlantImage"
const val TAG_NEW_PLANT_NAME_TEXT_FIELD = "newPlantNameTextField"
const val TAG_NEW_PLANT_QUERY_TEXT_FIELD = "newPlantQueryTextField"
const val TAG_NEW_PLANT_DESCRIPTION_TEXT_FIELD = "newPlantDescriptionTextField"
const val TAG_NEW_PLANT_SAVE_BUTTON = "newPlantSaveButton"
const val TAG_NEW_PLANT_DISCARD_BUTTON = "newPlantDiscardButton"

const val TAG_NEW_PLANT_EMPTY_SPOT = "newPlantEmptySpot"

@Composable
fun NewPlantScreen(
    navigation: INavigationRouter,
    viewModel: NewPlantViewModel = getViewModel(),
    takenPhotoUri: String
...
