...
import cz.mendelu.xmusil5.plantdiscoverer.ui.components.templates.DeleteDialog
import cz.mendelu.xmusil5.plantdiscoverer.ui.theme.grayCommon
import cz.mendelu.xmusil5.plantdiscoverer.utils.PictureUtils
import org.koin.androidx.compose.getViewModel

const val TAG_PLANT_EDIT_PLANT_IMAGE = "plantEditPlantImage"
const val TAG_PLANT_EDIT_NAME_TEXT_FIELD = "plantEditNameTextField"
const val TAG_PLANT_EDIT_QUERY_TEXT_FIELD = "plantEditQueryTextField"
const val TAG_PLANT_EDIT_DESCRIPTION_TEXT_FIELD = "plantEditDescriptionTextField"

const val TAG_PLANT_EDIT_SAVE_BUTTON = "plantEditSaveButton"
const val TAG_PLANT_EDIT_CANCEL_BUTTON = "plantEditCancelButton"

const val TAG_PLANT_EDIT_EMPTY_SPOT = "plantEditEmptySpot"

@Composable
fun PlantEditScreen(
    navigation: INavigationRouter,
    plantId: Long,
    viewModel: PlantEditViewModel = getViewModel()
...
